// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HierarchicalRoleAuthority mapping maps DAGs containing empty ranklines. 1`] = `
Object {
  "1": Array [
    "1",
  ],
}
`;

exports[`HierarchicalRoleAuthority mapping maps DAGs containing empty ranklines. 2`] = `
Object {
  "1": Array [
    "1",
  ],
  "2": Array [
    "2",
    "4",
  ],
  "3": Array [
    "3",
  ],
  "4": Array [
    "4",
  ],
}
`;

exports[`HierarchicalRoleAuthority mapping maps DAGs containing redundant ranks. 1`] = `
Object {
  "1": Array [
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
  ],
  "2": Array [
    "2",
    "4",
    "5",
    "8",
  ],
  "3": Array [
    "3",
    "6",
    "7",
  ],
  "4": Array [
    "4",
  ],
  "5": Array [
    "5",
  ],
  "6": Array [
    "6",
  ],
  "7": Array [
    "7",
  ],
  "8": Array [
    "8",
  ],
}
`;

exports[`HierarchicalRoleAuthority mapping maps a DAG containing different DAGs. 1`] = `
Object {
  "1": Array [
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
  ],
  "2": Array [
    "2",
    "4",
    "5",
  ],
  "3": Array [
    "3",
    "6",
  ],
  "4": Array [
    "4",
  ],
  "5": Array [
    "5",
  ],
  "6": Array [
    "6",
  ],
  "A": Array [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
  ],
  "B": Array [
    "B",
    "D",
    "E",
  ],
  "C": Array [
    "C",
    "F",
  ],
  "D": Array [
    "D",
  ],
  "E": Array [
    "E",
  ],
  "F": Array [
    "F",
  ],
  "a": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
  ],
  "b": Array [
    "b",
    "d",
    "e",
  ],
  "c": Array [
    "c",
    "f",
  ],
  "d": Array [
    "d",
  ],
  "e": Array [
    "e",
  ],
  "f": Array [
    "f",
  ],
}
`;

exports[`HierarchicalRoleAuthority mapping maps a baloon-shaped directed acyclic graph. 1`] = `
Object {
  "1": Array [
    "1",
    "2",
    "3",
    "4",
    "5",
  ],
  "2": Array [
    "2",
    "4",
    "5",
  ],
  "3": Array [
    "3",
    "4",
    "5",
  ],
  "4": Array [
    "4",
    "5",
  ],
  "5": Array [
    "5",
  ],
}
`;

exports[`HierarchicalRoleAuthority mapping maps a diamond-shaped directed acyclic graph. 1`] = `
Object {
  "1": Array [
    "1",
    "2",
    "3",
    "4",
  ],
  "2": Array [
    "2",
    "4",
  ],
  "3": Array [
    "3",
    "4",
  ],
  "4": Array [
    "4",
  ],
}
`;

exports[`HierarchicalRoleAuthority mapping maps a line-shaped directed acyclic graph. 1`] = `
Object {
  "1": Array [
    "1",
    "2",
    "3",
    "4",
    "5",
  ],
  "2": Array [
    "2",
    "3",
    "4",
    "5",
  ],
  "3": Array [
    "3",
    "4",
    "5",
  ],
  "4": Array [
    "4",
    "5",
  ],
  "5": Array [
    "5",
  ],
}
`;

exports[`HierarchicalRoleAuthority mapping maps a stick-figure-shaped directed acyclic graph. 1`] = `
Object {
  "1": Array [
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
    "10",
  ],
  "10": Array [
    "10",
  ],
  "2": Array [
    "2",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
    "10",
  ],
  "3": Array [
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
    "10",
  ],
  "4": Array [
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
    "10",
  ],
  "5": Array [
    "5",
  ],
  "6": Array [
    "6",
  ],
  "7": Array [
    "7",
    "8",
    "9",
    "10",
  ],
  "8": Array [
    "8",
    "9",
    "10",
  ],
  "9": Array [
    "9",
  ],
}
`;

exports[`HierarchicalRoleAuthority mapping maps a tree-shaped directed acyclic graph. 1`] = `
Object {
  "1": Array [
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
  ],
  "2": Array [
    "2",
    "4",
    "5",
  ],
  "3": Array [
    "3",
    "6",
    "7",
    "8",
  ],
  "4": Array [
    "4",
  ],
  "5": Array [
    "5",
  ],
  "6": Array [
    "6",
  ],
  "7": Array [
    "7",
    "8",
  ],
  "8": Array [
    "8",
  ],
}
`;

exports[`HierarchicalRoleAuthority mapping maps deeply nested directed acyclic graphs. 1`] = `
Object {
  "1": Array [
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
    "10",
  ],
  "10": Array [
    "10",
  ],
  "2": Array [
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
    "10",
  ],
  "3": Array [
    "3",
  ],
  "4": Array [
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
    "3",
    "10",
  ],
  "5": Array [
    "5",
    "6",
    "7",
    "8",
    "9",
    "3",
    "10",
  ],
  "6": Array [
    "6",
  ],
  "7": Array [
    "7",
  ],
  "8": Array [
    "8",
    "9",
    "3",
    "10",
  ],
  "9": Array [
    "9",
  ],
}
`;

exports[`HierarchicalRoleAuthority mapping maps empty directed acyclic graphs. 1`] = `Object {}`;
